--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>BlogDesafio</title>
-  <base href="blog-desafio-dio.netlify.app/">
+  <base href="https://blog-desafio-dio.netlify.app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
